# christmas-draw-app

./: .gitignore  Dockerfile  fly.toml  main.py  pyproject.toml
templates/: details.html  index.html
templates/css/: base.css
